--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <span class="score"></span><br><br>
         <p class="vendas">score de vendas: 0/200</p>
         <div class="gameover" id="gameover">
-            <img src="img/game-over.webp" alt="" class="mariogif">
+            <img src="img/game-over-fim.PNG" alt="" class="mariogif">
             <button  id="reset" class="botao" onclick="window.location.reload()">Tentar Novamente</button>
         </div>
         <img src="img/clouds.png" alt="" class="clouds">
